Videos and Emebeded

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
     </nav>
     <div class="wrapper">
         <h1>Welcome to My Page</h1>
+        <img class="img" src="./img/passportSize.jpg" alt="Image of Shafiq">
+        <!-- <video autoplay controls>
+            <source
+                src="./y2mate.com - Kesariya  Official LyricBrahmāstraRanbir Alia Pritam Arijit Singh Amitabh_480p (1).mp4"
+                type="video/mp4">Video is not supported on your browser
+        </video> -->
+        <div class="video-wrapper">
+            <iframe src="https://www.youtube.com/embed/McQjWaS8dRQ" title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
     </div>
     <!-- <p id="content">This is a Paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti obcaecati
         illum aspernatur dolor omnis asperiores cumque at officiis nisi eveniet fugit nostrum distinctio, sit, est ab
