--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>First Web Sie</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <style>
         h1 {
             color: #fff;
@@ -35,6 +36,20 @@
         <p>I work at Ministry of Health</p>
     </div> -->
     <!-- <h1 class="title">Welcome To My Page</h1> -->
+    <img src="./img/desktop-wallpaper-blue-banner-decorative-clipart-_-high-quality-and-transparent-png-clipart.jpg"
+        alt="Banner">
+    <div class="wrap2">
+        <article class="info">
+            <h2>Shafiq Mohamed Ismail</h2>
+            <p> <strong>A Child, A Son, A Student, A Software Engineer</strong> looking for Opportunities to uphold new
+                knowledge, Seeking new talents in persuing a career in Software Development, Passionate in System Design
+                and understanding user needs as a part of the whole.</p>
+            <p>Former Student at the University of Dodoma from 2018 - 2022 between those years has substantially became
+                A Former Member in UDOM-IEC participated in COSTECH in 2019 has thus become among the Innovators for
+                DASI(Digital Assisted Smart Invigilator)</p>
+            <img src="./img/IMG_2277_web.jpg" alt="">
+        </article>
+    </div>
 
     <nav class="Nav-bar">
         <div class="wrapper">
