--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <p>I work at Ministry of Health</p>
     </div> -->
     <!-- <h1 class="title">Welcome To My Page</h1> -->
-    <img src="./img/desktop-wallpaper-blue-banner-decorative-clipart-_-high-quality-and-transparent-png-clipart.jpg"
+    <img class="img-banner"
+        src="./img/desktop-wallpaper-blue-banner-decorative-clipart-_-high-quality-and-transparent-png-clipart.jpg"
         alt="Banner">
     <div class="wrap2">
         <article class="info">
@@ -47,7 +48,7 @@
             <p>Former Student at the University of Dodoma from 2018 - 2022 between those years has substantially became
                 A Former Member in UDOM-IEC participated in COSTECH in 2019 has thus become among the Innovators for
                 DASI(Digital Assisted Smart Invigilator)</p>
-            <img src="./img/IMG_2277_web.jpg" alt="">
+            <img class="img-me" src="./img/IMG_2277_web.jpg" alt="shafiq">
         </article>
     </div>
 
