new error found

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
         <p>I work at Ministry of Health</p>
     </div> -->
     <!-- <h1 class="title">Welcome To My Page</h1> -->
-    <img class="img-banner"
-        src="./img/desktop-wallpaper-blue-banner-decorative-clipart-_-high-quality-and-transparent-png-clipart.jpg"
-        alt="Banner">
+    <img class="img-banner" src="./img/My Banner_083843.jpg" alt="Banner">
     <div class="wrap2">
         <article class="info">
             <h2>Shafiq Mohamed Ismail</h2>
@@ -52,7 +50,7 @@
         </article>
     </div>
 
-    <nav class="Nav-bar">
+    <!-- <nav class="Nav-bar">
         <div class="wrapper">
             <ul class="Menu-Bar">
                 <li><a href="index.html">Home</a></li>
@@ -65,17 +63,17 @@
     <div class="wrapper">
         <h1>Welcome to My Page</h1>
         <img class="img" src="./img/passportSize.jpg" alt="Image of Shafiq">
-        <!-- <video autoplay controls>
+         <video autoplay controls>
             <source
                 src="./y2mate.com - Kesariya  Official LyricBrahmāstraRanbir Alia Pritam Arijit Singh Amitabh_480p (1).mp4"
                 type="video/mp4">Video is not supported on your browser
         </video> -->
-        <div class="video-wrapper">
+    <!-- <div class="video-wrapper">
             <iframe src="https://www.youtube.com/embed/McQjWaS8dRQ" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
-        </div>
-    </div>
+        </div> -->
+    <!-- </div> -->
     <!-- <p id="content">This is a Paragraph Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti obcaecati
         illum aspernatur dolor omnis asperiores cumque at officiis nisi eveniet fugit nostrum distinctio, sit, est ab
         maxime nemo, deserunt consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nobis quia
