startUp of Website

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>I work at Ministry of Health</p>
     </div> -->
     <!-- <h1 class="title">Welcome To My Page</h1> -->
-    <img class="img-banner" src="./img/My Banner_083843.jpg" alt="Banner">
+    <!-- <img class="img-banner" src="./img/My Banner_083843.jpg" alt="Banner">
     <div class="wrap2">
         <article class="info">
             <h2>Shafiq Mohamed Ismail</h2>
@@ -47,8 +47,8 @@
                 A Former Member in UDOM-IEC participated in COSTECH in 2019 has thus become among the Innovators for
                 DASI(Digital Assisted Smart Invigilator)</p>
             <img class="img-me" src="./img/IMG_2277_web.jpg" alt="shafiq">
-        </article>
-    </div>
+        </article> -->
+    <!-- </div> -->
 
     <!-- <nav class="Nav-bar">
         <div class="wrapper">
@@ -81,6 +81,28 @@
         consectetur, ex ratione eveniet expedita? Itaque, qui.</p> -->
     <!-- <a href="#">This is a Link</a> -->
     <!-- <a href="./pages/contact.html">Visit Contacts Page</a> -->
+    <header>
+        <a href="index.html" class="header-name">Shafiq Mohamed Ismail</a>
+        <nav>
+            <ul>
+                <li><a href="/pages/portfolio.html">Portfolio</a></li>
+                <li><a href="./pages/about.html">About Me</a></li>
+                <li><a href="">Passion</a></li>
+                <li><a href="./pages/contact.html">Contacts</a></li>
+            </ul>
+            <a href="" class="header-case">Cases</a>
+        </nav>
+    </header>
+    <main>
+        <section class="banner-header">
+            <div class="vertical-container">
+                <h1>I am a Freelancer <br>System Analyst</h1>
+                <h2>With Speciality in System Design, System Administration, Data Science, Graphical Design as well as a
+                    Little in ICT Networking </h2>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
