--- a/index.html
+++ b/index.html
@@ -101,8 +101,69 @@
                     Little in ICT Networking </h2>
             </div>
         </section>
+        <section class="index-links">
+            <a href="./pages/portfolio.html">
+                <div class="index-topic-rectangle">
+                    <h3>Portfolio</h3>
+                </div>
+            </a>
+            <a href="./pages/about.html">
+                <div class="index-topic-rectangle">
+                    <h3>About Me</h3>
+                </div>
+            </a>
+            <a href="#">
+                <div class="index-topic-square">
+                    <h3>Passion</h3>
+                </div>
+            </a>
+            <a href="./pages/contact.html">
+                <div class="index-topic-square">
+                    <h3>Contacts</h3>
+                </div>
+            </a>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <ul class="footer-linksmain">
+
+            <li><a href="./index.html">Home</a></li>
+
+
+            <li><a href="./pages/portfolio.html">Portfolio</a></li>
+
+
+            <li><a href="./pages/about.html">About Me</a>/li>
+
+
+            <li><a href="#">Passion</a></li>
+
+
+            <li><a href="./pages/contact.html">Contacts</a></li>
+
+        </ul>
+        <ul class="footer-linksDemo">
+            <li><a href="#">For More Info</a></li>
+
+            <li><a href="#">GitHub Repositories</a></li>
+
+
+            <li><a href="#">Figma Designs</a></li>
+
+
+            <li><a href="#">Linked In profile</a></li>
+
+
+            <li><a href="#">Instagram Profile</a></li>
+
+        </ul>
+        <div class="index-socialMedia">
+            <a href="#"><img src="./img/github.png" alt="GitHub"></a>
+            <a href="#"><img src="./img/figma.png" alt="Figma"></a>
+            <a href="#"><img src="./img/linkedin.png" alt="Linked in"></a>
+            <a href="#"><img src="./img/instagram.png" alt="Instagram"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
