--- a/index.html
+++ b/index.html
@@ -93,37 +93,42 @@
             <a href="" class="header-case">Cases</a>
         </nav>
     </header>
+
     <main>
         <section class="banner-header">
             <div class="vertical-container">
                 <h1>I am a Freelancer <br>System Analyst</h1>
-                <h2>With Speciality in System Design, System Administration, Data Science, Graphical Design as well as a
+                <h2>With Speciality in System Design, System Administration, Data Science, Graphical Design as well
+                    as a
                     Little in ICT Networking </h2>
             </div>
         </section>
-        <section class="index-links">
-            <a href="./pages/portfolio.html">
-                <div class="index-topic-rectangle">
-                    <h3>Portfolio</h3>
-                </div>
-            </a>
-            <a href="./pages/about.html">
-                <div class="index-topic-rectangle">
-                    <h3>About Me</h3>
-                </div>
-            </a>
-            <a href="#">
-                <div class="index-topic-square">
-                    <h3>Passion</h3>
-                </div>
-            </a>
-            <a href="./pages/contact.html">
-                <div class="index-topic-square">
-                    <h3>Contacts</h3>
-                </div>
-            </a>
-        </section>
+        <div class="wrapper02">
+            <section class="index-links">
+                <a href="./pages/portfolio.html">
+                    <div class="index-topic-rectangle">
+                        <h3>Portfolio</h3>
+                    </div>
+                </a>
+                <a href="./pages/about.html">
+                    <div class="index-topic-rectangle">
+                        <h3>About Me</h3>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="index-topic-square">
+                        <h3>Passion</h3>
+                    </div>
+                </a>
+                <a href="./pages/contact.html">
+                    <div class="index-topic-square">
+                        <h3>Contacts</h3>
+                    </div>
+                </a>
+            </section>
+        </div>
     </main>
+
     <!-- <footer>
         <ul class="footer-linksmain">
 
