add grid to index links section, duplicated contacts square to two more grid elements

--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
                         <h3>Contacts</h3>
                     </div>
                 </a>
+                <a href="./pages/contact.html">
+                    <div class="index-topic-square">
+                        <h3>Contacts</h3>
+                    </div>
+                </a>
+                <a href="./pages/contact.html">
+                    <div class="index-topic-square">
+                        <h3>Contacts</h3>
+                    </div>
+                </a>
             </section>
         </div>
     </main>
